# troika-http

./: .codeclimate.yml  .editorconfig  .gitignore  .landscape.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: deploy.yaml  testing.yaml
docs/: Makefile  conf.py  example.rst  index.rst
examples/: app.py
requires/: development.txt  installation.txt  testing.txt
tests/: test_route.py  test_transcoders.py
troika/: __init__.py
troika/http/: __init__.py  application.py  escape.py  exceptions.py  handlers.py  route.py  server.py  transcoders.py  version.py
