[metadata]
name = troika-http
version = attr: troika.http.__version__
description = A Python 3 AsyncIO HTTP Application Framework inspired by Tornado
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license-file = LICENSE
home-page = https://github.com/troika-framework/troika-http
project_urls =
  Bug Tracker = https://github.com/troika-framework/troika-http/issues
  Documentation = https://troika-http.readthedocs.io
  Source Code = https://github.com/troika-framework/troika-http
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Communications
  Topic :: Internet
  Topic :: Internet :: WWW/HTTP
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Application Frameworks
requires-dist = setuptools
keywords =
  asyncio
  framework
  http

[options]
include_package_data = True
install_requires =
  httptools
  ietfparse
namespace_packages =
  troika
packages =
  troika.http
zip_safe = true

[options.extras_require]
msgpack =
  u-msgpack-python
test =
  coverage
  flake8
  flake8-comprehensions
  flake8-deprecated
  flake8-import-order
  flake8-print
  flake8-quotes
  flake8-rst-docstrings
  flake8-tuple
  mypy
  pygments
  pyyaml
  umsgpack-python
  yapf
yaml =
  pyyaml

[coverage:run]
branch = True
command_line = -m unittest discover --verbose
data_file = build/.coverage

[coverage:report]
show_missing = True
include =
  troika/*.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml

[flake8]
application-import-names = troika.http, tests
exclude = build,docs,env
import-order-style = pycharm
rst-directives = seealso
rst-roles = attr,class,const,data,exc,func,meth,mod,obj,ref,yields

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
no_implicit_optional = true
strict_optional = True
